Another WIP with a lot of refactoring but one I feel okay about
